QPID-8537: replace use of constructors marked deprecated-for-removal